--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,9 @@
 <div>
 <form method="POST">
 	{{ form.hidden_tag() }}
-	{{ form.text.label }} {{ form.text() }}
-	{{ form.username.label }} {{ form.username() }}
-    {{ form.display_name.label }} {{ form.display_name() }}
+	{{ form.text.label }} {{ form.text() }}<br>
+	{{ form.username.label }} {{ form.username() }}<br>
+    {{ form.display_name.label }} {{ form.display_name() }}<br>
 	{{ form.submit() }}
 </form>
 </div>
